article/reflection-2019 - improve both articles, fix hover styling for dark mode button

--- a/src/css/atoms/button.css
+++ b/src/css/atoms/button.css
@@ -78,16 +78,7 @@ BUTTON
   .a-button:hover,.a-button:focus {
     background-color: var(--yellow);
     border-color: var(--yellow);
-    border-style: solid;
-    border-width: .25rem;
     color: var(--blue-90);
-  }
-
-  .a-button:focus {
-    /* background-color: var(--yellow);
-    border-color: var(--blue-50);
-    border-width: .25rem;
-    color: var(--blue-90); */
   }
 }
 
